<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="appHeader">My Nanodegree Apps!</string>
    <string name="appSpotify">Spotify Streamer</string>
    <string name="appScores">Scores App</string>
    <string name="appLib">Library App</string>
    <string name="appBigger">Build It Bigger</string>
    <string name="appReader">XYZ Reader</string>
    <string name="appCapstone">Capstone: My Own App</string>
    <string name="open_app">This button will launch </string>
</resources>